# deriv-research

./: .gitignore  AUTOSYNC_TEST.md  FINDINGS.md  LICENSE  PROTOCOL.md  PUBLICATION_WRITEUP.md  README.md  requirements.txt
config/: accounts.example.yaml  config.yaml
data/: probe_summary.json  pull_summary.json
data/analysis/: combined_summary.json  regimes_combined_summary.json
data/analysis/Boom_1000_Index/: summary.json
data/analysis/Boom_1000_Index/regimes/: VERDICT.md  step_1_hmm.json  step_2_acf.json
data/analysis/Crash_1000_Index/: summary.json
data/analysis/Crash_1000_Index/regimes/: VERDICT.md  step_1_hmm.json  step_2_acf.json
scripts/: analyze_regimes.py  analyze_spikes.py  probe_history.py  pull_history.py
src/: config_loader.py  logger.py  mt5_client.py  regime.py  spike_detector.py  tick_io.py
synthetic_spike_backtest/: README.md  SPEC.md  pyproject.toml
synthetic_spike_backtest/config/: defaults.yaml
synthetic_spike_backtest/src/synthetic_spike/: __init__.py  cli.py  config.py  fills.py  io_ticks.py  metrics.py  reporting.py  simulator.py  state_machine.py  sweeps.py  triggers.py  types.py  validation.py
synthetic_spike_backtest/tests/: test_core.py  test_regression.py
